--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -2,7 +2,8 @@ set -sg escape-time 0
 set-option -g prefix C-a
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color*:Tc"
-set -g allow-rename off
+set -g allow-rename on
+set -g set-titles on; set -g set-titles-string "(#h) #T"
 
 # key bindings
 set-window-option -g mode-keys vi
