--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans Mono 10
+font pango:DejaVu Sans Mono 5
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -107,12 +107,12 @@ bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+guillemotleft move container to workspace $ws2
 bindsym $mod+Shift+guillemotright move container to workspace $ws3
 bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws0
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume 0 +5%; pactl set-sink-volume 2 +5%"
 bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume 0 -5%; pactl set-sink-volume 2 -5%"
@@ -172,14 +172,14 @@ client.unfocused        $color0  $color0 $color4 $color12  $color0
 client.urgent           $color0  $color8 $color4 $color12  $color1
 client.placeholder      #000000  #0c0c0c #ffffff #000000   #0c0c0c
 
-for_window [class="^.*$"] border pixel 2
+for_window [class="^.*$"] border pixel 1
 default_border normal
 default_floating_border none
 
-gaps inner 8
+gaps inner 4
 gaps outer 0
 
-exec --no-startup-id compton -bcCGfz
+exec --no-startup-id compton
 exec --no-startup-id sh ~/.fehbg
 exec --no-startup-id nm-applet
 exec --no-startup-id xset r rate 200 30
