--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -30,8 +30,71 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 set -g @onedark_time_format "%H:%M"
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# Visual tweaks
+
+color_black="#292d3e"
+color_black_light="#434758"
+color_red="#f07178"
+color_red_light="#ff8b92"
+color_green="#c3e88d"
+color_green_light="#ddffa7"
+color_yellow="#ffcb6b"
+color_yellow_light="#ffe585"
+color_blue="#82aaff"
+color_blue_light="#9cc4ff"
+color_magenta="#c792ea"
+color_magenta_light="#e1acff"
+color_cyan="#89ddff"
+color_cyan_light="#a3f7ff"
+color_white="#d0d0d0"
+color_white_light="#ffffff"
+
+# panes
+set -g pane-active-border-fg "$color_green"
+set -g pane-active-border-bg "$color_black"
+set -g pane-border-fg "$color_black_light"
+set -g pane-border-bg "$color_black"
+
+# status line
+set -g status-justify right
+set -g status-fg "$color_red"
+set -g status-bg "$color_black_light"
+set -g status-attr bright
+set -g status-interval 1
+set -g status-position bottom
+set -g status-left " → #{pane_current_path}"
+set -g status-left-length 50
+set -g status-right "#[fg=$color_blue_light]#S #[fg=$color_cyan] %H:%M:%S "
+set -g status-right-length 50
+
+# messaging
+set -g message-bg yellow
+set -g message-fg black
+set -g message-command-bg black
+set -g message-command-fg blue
+
+# window mode
+setw -g mode-bg "$color_green"
+setw -g mode-fg "$color_black"
+
+# window status
+setw -g window-status-current-fg "$color_green"
+setw -g window-status-current-attr bright
+setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
+
+setw -g window-status-fg "$color_white"
+setw -g window-status-attr dim
+setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_black_light]#W#[fg=$color_red_light]#F"
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg "$color_red_light"
+setw -g window-status-bell-bg "$color_black_light"
+
+set -g message-attr bold
+set -g message-fg "$color_green"
+set -g message-bg "$color_black_light"
