Configuration for group windows for tmux.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -4,6 +4,7 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color*:Tc"
 set -g allow-rename on
 set -g set-titles on; set -g set-titles-string "(#h) #T"
+setw -g aggressive-resize on
 
 # key bindings
 set-window-option -g mode-keys vi
@@ -30,6 +31,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @onedark_time_format "%H:%M"
 
@@ -96,5 +98,5 @@ setw -g window-status-bell-fg "$color_red_light"
 setw -g window-status-bell-bg "$color_black_light"
 
 set -g message-attr bold
-set -g message-fg "$color_green"
+set -g message-fg "$color_white"
 set -g message-bg "$color_black_light"
