Update tmux configuration.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -64,7 +64,7 @@ set -g pane-border-bg "$color_black"
 
 # status line
 set -g status-justify right
-set -g status-fg "$color_red"
+set -g status-fg "$color_blue"
 set -g status-bg "$color_black_light"
 set -g status-attr bright
 set -g status-interval 1
@@ -98,5 +98,5 @@ setw -g window-status-bell-fg "$color_red_light"
 setw -g window-status-bell-bg "$color_black_light"
 
 set -g message-attr bold
-set -g message-fg "$color_white"
+set -g message-fg "$color_red"
 set -g message-bg "$color_black_light"
