--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -51,10 +51,12 @@ color_blue="#82aaff"
 color_blue_light="#9cc4ff"
 color_magenta="#c792ea"
 color_magenta_light="#e1acff"
+color_magenta_dimmed="#7A5892"
 color_cyan="#89ddff"
 color_cyan_light="#a3f7ff"
 color_white="#d0d0d0"
 color_white_light="#ffffff"
+color_grey="#666666"
 
 # panes
 set -g pane-active-border-fg "$color_green"
@@ -70,9 +72,9 @@ set -g status-attr bright
 set -g status-interval 1
 set -g status-position bottom
 set -g status-left " → #{pane_current_path}"
-set -g status-left-length 50
-set -g status-right "#[fg=$color_blue_light]#S #[fg=$color_cyan] %H:%M:%S "
-set -g status-right-length 50
+set -g status-left-length 200
+set -g status-right "  #[fg=$color_green]#S #[fg=$color_cyan] %H:%M:%S "
+set -g status-right-length 200
 
 # messaging
 set -g message-bg yellow
@@ -89,9 +91,9 @@ setw -g window-status-current-fg "$color_green"
 setw -g window-status-current-attr bright
 setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
 
-setw -g window-status-fg "$color_white"
+setw -g window-status-fg "$color_grey"
 setw -g window-status-attr dim
-setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_black_light]#W#[fg=$color_red_light]#F"
+setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_magenta_dimmed]#W#[fg=$color_red_light]#F"
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg "$color_red_light"
