Update the tmux conf for 2.9.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -59,16 +59,12 @@ color_white_light="#ffffff"
 color_grey="#666666"
 
 # panes
-set -g pane-active-border-fg "$color_green"
-set -g pane-active-border-bg "$color_black"
-set -g pane-border-fg "$color_black_light"
-set -g pane-border-bg "$color_black"
+set -g pane-active-border-style fg="$color_green",bg="$color_black"
+set -g pane-border-style fg="$color_black_light",bg="$color_black"
 
 # status line
 set -g status-justify right
-set -g status-fg "$color_blue"
-set -g status-bg "$color_black_light"
-set -g status-attr bright
+set -g status-style fg="$color_blue",bg="$color_black_light",bright
 set -g status-interval 1
 set -g status-position bottom
 set -g status-left " → #{pane_current_path}"
@@ -77,28 +73,19 @@ set -g status-right "  #[fg=$color_green]#S #[fg=$color_cyan] %H:%M:%S "
 set -g status-right-length 200
 
 # messaging
-set -g message-bg yellow
-set -g message-fg black
-set -g message-command-bg black
-set -g message-command-fg blue
+set -g message-style bg=yellow,fg=black
+set -g message-command-style bg=black,fg=blue
 
 # window mode
-setw -g mode-bg "$color_green"
-setw -g mode-fg "$color_black"
+setw -g mode-style bg="$color_green",fg="$color_black"
 
 # window status
-setw -g window-status-current-fg "$color_green"
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg="$color_green",bright
 setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
 
-setw -g window-status-fg "$color_grey"
-setw -g window-status-attr dim
+setw -g window-status-style fg="$color_grey",dim
 setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_magenta_dimmed]#W#[fg=$color_red_light]#F"
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg "$color_red_light"
-setw -g window-status-bell-bg "$color_black_light"
+setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light",bold
 
-set -g message-attr bold
-set -g message-fg "$color_red"
-set -g message-bg "$color_black_light"
+set -g message-style fg="$color_red",bg="$color_black_light",bold
