Put user and hostname in the tmux config.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -69,7 +69,7 @@ set -g status-interval 1
 set -g status-position bottom
 set -g status-left " → #{pane_current_path}"
 set -g status-left-length 200
-set -g status-right "  #[fg=$color_green]#S #[fg=$color_cyan] %H:%M:%S "
+set -g status-right "  #[fg=$color_green]#S #[fg=$color_grey]${USER}@#H #[fg=$color_cyan]%H:%M:%S "
 set -g status-right-length 200
 
 # messaging
