--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -5,6 +5,7 @@ set-option -ga terminal-overrides ",xterm-256color*:Tc"
 set -g allow-rename on
 set -g set-titles on; set -g set-titles-string "(#h) #T"
 setw -g aggressive-resize on
+set -g mouse on
 
 # key bindings
 set-window-option -g mode-keys vi
