--- a/archlinux/.config/compton.conf
+++ b/archlinux/.config/compton.conf
@@ -7,3 +7,11 @@ blur-background-fixed = true;
 blur-kern = "3x3box";
 blur-method = "kawase";
 blur-strength = 6;
+
+shadow = true;
+no-dock-shadow = true;
+
+fading = true;
+
+fade-in-step = 0.06;
+fade-out-step = 0.06;
