--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -64,12 +64,11 @@ set -g pane-active-border-style fg="$color_green",bg="$color_black"
 set -g pane-border-style fg="$color_black_light",bg="$color_black"
 
 # status line
-set -g status-justify right
+set -g status-justify left
 set -g status-style fg="$color_blue",bg="$color_black_light",bright
 set -g status-interval 1
 set -g status-position bottom
-set -g status-left " → #{pane_current_path}"
-set -g status-left-length 200
+set -g status-left " "
 set -g status-right "  #[fg=$color_green]#S #[fg=$color_grey]${USER}@#H #[fg=$color_cyan]%H:%M:%S "
 set -g status-right-length 200
 
