--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -64,7 +64,7 @@ set -g pane-active-border-style fg="$color_green",bg="$color_black"
 set -g pane-border-style fg="$color_black_light",bg="$color_black"
 
 # status line
-set -g status-justify left
+set -g status-justify centre
 set -g status-style fg="$color_blue",bg="$color_black_light",bright
 set -g status-interval 1
 set -g status-position bottom
