Shades of purple!

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -40,28 +40,29 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_black="#292d3e"
-color_black_light="#434758"
-color_red="#f07178"
-color_red_light="#ff8b92"
-color_green="#c3e88d"
-color_green_light="#ddffa7"
-color_yellow="#ffcb6b"
-color_yellow_light="#ffe585"
-color_blue="#82aaff"
-color_blue_light="#9cc4ff"
-color_magenta="#c792ea"
-color_magenta_light="#e1acff"
-color_magenta_dimmed="#7A5892"
-color_cyan="#89ddff"
-color_cyan_light="#a3f7ff"
-color_white="#d0d0d0"
-color_white_light="#ffffff"
-color_grey="#666666"
+color_background="#1e1d40"
+color_black="colour234"
+color_black_light="colour235"
+color_red="colour1"
+color_red_light="colour9"
+color_green="colour2"
+color_green_light="colour10"
+color_yellow="colour3"
+color_yellow_light="colour11"
+color_blue="colour4"
+color_blue_light="colour12"
+color_magenta="colour5"
+color_magenta_light="colour13"
+color_magenta_dimmed="colour203"
+color_cyan="colour6"
+color_cyan_light="colour14"
+color_white="colour7"
+color_white_light="colour15"
+color_grey="colour8"
 
 # panes
-set -g pane-active-border-style fg="$color_green",bg="$color_black"
-set -g pane-border-style fg="$color_black_light",bg="$color_black"
+set -g pane-active-border-style fg="$color_green",bg="$color_background"
+set -g pane-border-style fg="$color_black_light",bg="$color_background"
 
 # status line
 set -g status-justify left
