Fix tmux setup for colors.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -42,7 +42,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 color_background="#1e1d40"
 color_black="colour234"
-color_black_light="colour235"
+color_black_light="colour17"
 color_red="colour1"
 color_red_light="colour9"
 color_green="colour2"
@@ -61,12 +61,12 @@ color_white_light="colour15"
 color_grey="colour8"
 
 # panes
-set -g pane-active-border-style fg="$color_green",bg="$color_background"
+set -g pane-active-border-style fg="$color_magenta",bg="$color_background"
 set -g pane-border-style fg="$color_black_light",bg="$color_background"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_blue",bg="$color_black_light",bright
+set -g status-style fg="$color_blue",bg="$color_black_light"
 set -g status-interval 1
 set -g status-position bottom
 set -g status-left " "
@@ -81,12 +81,12 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_black"
 
 # window status
-setw -g window-status-current-style fg="$color_green",bright
-setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
+setw -g window-status-current-style fg="$color_yellow"
+setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
 
 setw -g window-status-style fg="$color_grey",dim
-setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_magenta_dimmed]#W#[fg=$color_red_light]#F"
+setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_blue]#W#[fg=$color_green_light]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light",bold
 
-set -g message-style fg="$color_red",bg="$color_black_light",bold
+set -g message-style fg="$color_magenta",bg="$color_black_light",bold
