--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -74,7 +74,7 @@ set -g status-right "  #[fg=$color_green]#S #[fg=$color_grey]${USER}@#H #[fg=$co
 set -g status-right-length 200
 
 # messaging
-set -g message-style bg=yellow,fg=black
+set -g message-style bg="$color_yellow",fg="$color_black"
 set -g message-command-style bg=black,fg=blue
 
 # window mode
@@ -87,6 +87,6 @@ setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]
 setw -g window-status-style fg="$color_grey",dim
 setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_blue]#W#[fg=$color_green_light]#F"
 
-setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light",bold
+setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light"
 
-set -g message-style fg="$color_magenta",bg="$color_black_light",bold
+set -g message-style fg="$color_yellow_light",bg="$color_black_light",bold
