--- a/archlinux/.config/nvim/coc-settings.json
+++ b/archlinux/.config/nvim/coc-settings.json
@@ -1,13 +1,10 @@
 {
   "languageserver": {
-    "cquery": {
-      "command": "cquery",
-      "args": ["--log-file=/tmp/cq.log"],
-      "filetypes": ["c", "cpp"],
+   "clangd": {
+      "command": "clangd",
+      "args": ["--background-index"],
       "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-      "initializationOptions": {
-        "cacheDirectory": "/tmp/cquery"
-      }
+      "filetypes": ["c", "cpp", "objc", "objcpp"]
     }
   }
 }
