--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -53,7 +53,6 @@ color_blue="colour4"
 color_blue_light="colour12"
 color_magenta="colour5"
 color_magenta_light="colour13"
-color_magenta_dimmed="colour203"
 color_cyan="colour6"
 color_cyan_light="colour14"
 color_white="colour7"
@@ -61,16 +60,16 @@ color_white_light="colour15"
 color_grey="colour8"
 
 # panes
-set -g pane-active-border-style fg="$color_magenta",bg="$color_background"
-set -g pane-border-style fg="$color_black_light",bg="$color_background"
+set -g pane-active-border-style fg="$color_blue",bg="$color_background"
+set -g pane-border-style fg="$color_grey",bg="$color_background"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_blue",bg="$color_black_light"
+set -g status-style fg="$color_white",bg="$color_black_light"
 set -g status-interval 1
-set -g status-position bottom
-set -g status-left " "
-set -g status-right "  #[fg=$color_green]#S #[fg=$color_grey]${USER}@#H #[fg=$color_cyan]%H:%M:%S "
+set -g status-position top
+set -g status-left ""
+set -g status-right "#[fg=$color_red_light]#S #[fg=$color_blue_light]${USER}#[fg=$color_cyan]@#[fg=$color_yellow]#H #[fg=$color_grey]%H:%M "
 set -g status-right-length 200
 
 # messaging
@@ -81,12 +80,12 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_black"
 
 # window status
-setw -g window-status-current-style fg="$color_yellow"
-setw -g window-status-current-format "#I#[fg=$color_yellow]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
+setw -g window-status-current-style fg="$color_green",bg="$color_background"
+setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
 
-setw -g window-status-style fg="$color_grey",dim
-setw -g window-status-format "#I#[fg=$color_black_light]:#[fg=$color_blue]#W#[fg=$color_green_light]#F"
+setw -g window-status-style fg="$color_grey"
+setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color_red]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light"
 
-set -g message-style fg="$color_yellow_light",bg="$color_black_light",bold
+set -g message-style fg="$color_background",bg="$color_magenta",bold
