Better background for tmux statusline.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -65,7 +65,7 @@ set -g pane-border-style fg="$color_grey",bg="$color_background"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_white",bg="$color_black_light"
+set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left ""
