--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -80,7 +80,7 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_black"
 
 # window status
-setw -g window-status-current-style fg="$color_green",bg="$color_background"
+setw -g window-status-current-style fg="$color_green"
 setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
 
 setw -g window-status-style fg="$color_grey"
